# starnet

./: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
src/: auth.tsx  index.css  main.tsx  promise-action.ts  result.ts  tab-handles.tsx  tab-manager.tsx  tabs.tsx  theme.tsx  use-promise-state.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bindings/: Comment.ts  CommentAuthor.ts  Cursor.ts  Error.ts  ExploreMode.ts  ExploreQuery.ts  FeaturedLabel.ts  FrontPage.ts  FrontPageCuratedProject.ts  FrontPageDesignStudioProject.ts  FrontPageFeaturedStudio.ts  FrontPageMostRemixedProject.ts  FrontPageProject.ts  Health.ts  HealthCache.ts  HealthSql.ts  HealthSqlItem.ts  HealthSqlItemItem.ts  Language.ts  Login.ts  Message.ts  MessageCommentLocation.ts  MessageEvent.ts  News.ts  Project.ts  Project2.ts  Project3.ts  Project3Author.ts  ProjectAuthor.ts  ProjectHistory.ts  ProjectRemix.ts  ProjectStats.ts  SearchQuery.ts  SendComment.ts  Studio.ts  Studio2.ts  StudioAction.ts  StudioActionEvent.ts  StudioHistory.ts  StudioProject.ts  (+17 more)
src-tauri/src/: cursor.rs  from_vec.rs  main.rs
src-tauri/src/commands/: auth.rs  me.rs  mod.rs  project.rs  studio.rs  user.rs
src-tauri/src/entities/: comment.rs  explore.rs  front_page.rs  language.rs  message.rs  mod.rs  project.rs  search.rs  studio.rs  studio_action.rs  stuff.rs  user.rs  user_comment.rs  user_featured.rs
src-tauri/src/session/: auth.rs  comment.rs  mod.rs  project.rs  studio.rs  studio_action.rs  user.rs  user_comment.rs
src/app/: control-panel.tsx  index.tsx  (+6 more)
(+68 files in other folders)
