[package]
name = "starnet"
version = "0.1.0"
description = "starnet - Scratch Community"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["fs-all", "path-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
s2rs = { version = "0.6.15", features = ["html", "cookie"] }
tokio = "1.27.0"
ts-rs = "6.2.1"
s2rs-derive = "0.1.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
